# KuCoinita

./: .gitignore  README.md  dev.IPYNB  kucoin.xlsx  kucoin_history.xlsx  main.py  pyproject.toml  requirements.txt
history/: main.py
notebooks/: coinMarketCapApiTest.IPYNB  dev.IPYNB
src/: GoogleDrive.py  kucoin.py  pg.py  xlsx.py
