[tool.poetry]
name = "kucoin"
version = "0.1.0"
description = ""
authors = ["MiletoCarmelo <carmelo.mileto@flowbank.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.8"
requests = "^2.31.0"
pandas = "^2.2.0"
openpyxl = "^3.1.2"
prefect = "^2.14.18"
seaborn = "^0.13.2"
plotly = "^5.18.0"
nbformat = "^5.9.2"
google = "^3.0.0"
google-api-python-client = "^2.116.0"
python-dotenv = "^1.0.1"
black = "^24.2.0"
nest-asyncio = "^1.6.0"
asyncio = "^3.4.3"
sqlalchemy = "^2.0.27"
tqdm = "^4.66.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
